Numbers alignment correction

--- a/src/Home.css
+++ b/src/Home.css
@@ -161,7 +161,7 @@ a.right {
     }
     /* 4 Number */
     .stats-value4 {
-        width: 60%;
+        width: 65%;
     }
     .stats-desc {
         padding-left: 10px !important;
